docs-archive/apache-airflow/3.3.0/_sources/_api/airflow/exceptions/index.rst.txt
airflow.exceptions
==================

.. py:module:: airflow.exceptions

.. autoapi-nested-parse::

   Exceptions used by Airflow.



Exceptions
----------

.. autoapisummary::

   airflow.exceptions.AirflowException
   airflow.exceptions.AirflowBadRequest
   airflow.exceptions.InvalidStatsNameException
   airflow.exceptions.AirflowDagDuplicatedIdException
   airflow.exceptions.AirflowClusterPolicyViolation
   airflow.exceptions.AirflowClusterPolicySkipDag
   airflow.exceptions.AirflowClusterPolicyError
   airflow.exceptions.DagNotFound
   airflow.exceptions.DagCodeNotFound
   airflow.exceptions.DagRunNotFound
   airflow.exceptions.DagNotPartitionedError
   airflow.exceptions.InvalidPartitionKeyError
   airflow.exceptions.DagRunAlreadyExists
   airflow.exceptions.SerializationError
   airflow.exceptions.TaskInstanceNotFound
   airflow.exceptions.NotMapped
   airflow.exceptions.PoolNotFound
   airflow.exceptions.AirflowFileParseException
   airflow.exceptions.AirflowUnsupportedFileTypeException
   airflow.exceptions.ConnectionNotUnique
   airflow.exceptions.VariableNotUnique
   airflow.exceptions.PodMutationHookException
   airflow.exceptions.PodReconciliationError
   airflow.exceptions.RemovedInAirflow4Warning
   airflow.exceptions.AirflowProviderDeprecationWarning
   airflow.exceptions.DeserializingResultError
   airflow.exceptions.UnknownExecutorException
   airflow.exceptions.DeserializationError
   airflow.exceptions.DagRunTypeNotAllowed
   airflow.exceptions.AirflowClearRunningTaskException


Classes
-------

.. autoapisummary::

   airflow.exceptions.FileSyntaxError


Functions
---------

.. autoapisummary::

   airflow.exceptions.__getattr__


Module Contents
---------------

.. py:exception:: AirflowException

   Bases: :py:obj:`Exception`


   Base exception for Airflow errors.


.. py:exception:: AirflowBadRequest

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when the application or server cannot handle the request.


   .. py:attribute:: status_code


.. py:exception:: InvalidStatsNameException

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when name of the stats is invalid.


.. py:exception:: AirflowDagDuplicatedIdException(dag_id, incoming, existing)

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when a DAG's ID is already used by another DAG.


   .. py:attribute:: dag_id


   .. py:attribute:: incoming


   .. py:attribute:: existing


   .. py:method:: __str__()

      Return str(self).



.. py:exception:: AirflowClusterPolicyViolation

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when there is a violation of a Cluster Policy in DAG definition.


.. py:exception:: AirflowClusterPolicySkipDag

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when skipping dag is needed in Cluster Policy.


.. py:exception:: AirflowClusterPolicyError

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise for a Cluster Policy other than AirflowClusterPolicyViolation or AirflowClusterPolicySkipDag.


.. py:exception:: DagNotFound

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowNotFoundException`


   Raise when a DAG is not available in the system.


.. py:exception:: DagCodeNotFound

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowNotFoundException`


   Raise when a DAG code is not available in the system.


.. py:exception:: DagRunNotFound

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowNotFoundException`


   Raise when a DAG Run is not available in the system.


.. py:exception:: DagNotPartitionedError

   Bases: :py:obj:`ValueError`


   Raise when a partition_key is supplied for a Dag that is not partitioned.


.. py:exception:: InvalidPartitionKeyError

   Bases: :py:obj:`ValueError`


   Raise when a partition_key value is invalid.

   1. empty or exceeds the maximum allowed length
   2. cannot be decoded to a partition_date by the timetable


.. py:exception:: DagRunAlreadyExists(dag_run)

   Bases: :py:obj:`AirflowBadRequest`


   Raise when creating a DAG run for DAG which already has DAG run entry.


   .. py:attribute:: dag_run


   .. py:method:: serialize()


.. py:exception:: SerializationError

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   A problem occurred when trying to serialize something.


.. py:exception:: TaskInstanceNotFound

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowNotFoundException`


   Raise when a task instance is not available in the system.


.. py:exception:: NotMapped

   Bases: :py:obj:`Exception`


   Raise if a task is neither mapped nor has any parent mapped groups.


.. py:exception:: PoolNotFound

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowNotFoundException`


   Raise when a Pool is not available in the system.


.. py:class:: FileSyntaxError

   Bases: :py:obj:`NamedTuple`


   Information about a single error in a file.


   .. py:attribute:: line_no
      :type:  int | None


   .. py:attribute:: message
      :type:  str


   .. py:method:: __str__()


.. py:exception:: AirflowFileParseException(msg, file_path, parse_errors)

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raises when connection or variable file can not be parsed.

   :param msg: The human-readable description of the exception
   :param file_path: A processed file that contains errors
   :param parse_errors: File syntax errors


   .. py:attribute:: msg


   .. py:attribute:: file_path


   .. py:attribute:: parse_errors


   .. py:method:: __str__()

      Return str(self).



.. py:exception:: AirflowUnsupportedFileTypeException

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when a file type is not supported.


.. py:exception:: ConnectionNotUnique

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when multiple values are found for the same connection ID.


.. py:exception:: VariableNotUnique

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when multiple values are found for the same variable name.


.. py:exception:: PodMutationHookException

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raised when exception happens during Pod Mutation Hook execution.


.. py:exception:: PodReconciliationError

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raised when an error is encountered while trying to merge pod configs.


.. py:exception:: RemovedInAirflow4Warning

   Bases: :py:obj:`DeprecationWarning`


   Issued for usage of deprecated features that will be removed in Airflow4.


   .. py:attribute:: deprecated_since
      :type:  str | None
      :value: None


      Indicates the airflow version that started raising this deprecation warning



.. py:exception:: AirflowProviderDeprecationWarning

   Bases: :py:obj:`DeprecationWarning`


   Issued for usage of deprecated features of Airflow provider.


   .. py:attribute:: deprecated_provider_since
      :type:  str | None
      :value: None


      Indicates the provider version that started raising this deprecation warning



.. py:exception:: DeserializingResultError

   Bases: :py:obj:`ValueError`


   Raised when an error is encountered while a pickling library deserializes a pickle file.


   .. py:method:: __str__()

      Return str(self).



.. py:exception:: UnknownExecutorException

   Bases: :py:obj:`ValueError`


   Raised when an attempt is made to load an executor which is not configured.


.. py:exception:: DeserializationError(dag_id = None, message = None)

   Bases: :py:obj:`Exception`


   Raised when a Dag cannot be deserialized.

   This exception should be raised using exception chaining:
   `raise DeserializationError(dag_id) from original_exception`


   .. py:attribute:: dag_id
      :value: None



.. py:exception:: DagRunTypeNotAllowed

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raised when a Dag does not allow the requested run type.


.. py:exception:: AirflowClearRunningTaskException

   Bases: :py:obj:`airflow.sdk.exceptions.AirflowException`


   Raise when the user attempts to clear currently running tasks.


.. py:function:: __getattr__(name)

   Provide backward compatibility for moved exceptions.


